Completely functional. Still glitches to work out.

--- a/index.html
+++ b/index.html
@@ -7,14 +7,33 @@
     <body>
         <div class="container">
             <div class="calculator">
-                <div class='screen'></div>
+                <div class='screen'>
+                   <div class="current"></div>
+                   <div class="previous"></div>
+                </div>
                 <div class='buttons'>
-                    <div class='numButtons'>
-
-                    </div>
-                    <div class='operation buttons'></div>
+                   <button class="one number">1</button>
+                   <button class="two number">2</button>
+                   <button class="three number">3</button>
+                   <button class="four number">4</button>
+                   <button class="five number">5</button>
+                   <button class="six number">6</button>
+                   <button class="seven number">7</button>
+                   <button class="eight number">8</button>
+                   <button class="nine number">9</button>
+                   <button class="zero number">0</button>
+                   <button class="decimal">.</button>
+                   <button class="equal operator">=</button>
+                   <button class="backspace ">b</button>
+                   <button class="clear">C</button>
+                   <button class="divide operator">/</button>
+                   <button class="multiply operator">X</button>
+                   <button class="subtract operator">-</button>
+                   <button class="add operator">+</button>
+                   
                 </div>
             </div>
         </div>
-    <script src="java.js"></script>
+        <script src="java.js"></script> 
+    </body>
 </html>
